--- a/app/src/main/res/layout/activity_crop_planting.xml
+++ b/app/src/main/res/layout/activity_crop_planting.xml
@@ -179,6 +179,7 @@
                 android:id="@+id/imageViewChooseImg"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:paddingStart="10dp"
                 android:src="@drawable/baseline_insert_photo_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
