--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -22,6 +22,12 @@
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/otherReportsTab"
+        android:title="Community Reports"
+        android:icon="@drawable/baseline_notifications_24"/>
+    <item
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/profileTab"
         android:title="Profile"
         android:icon="@drawable/baseline_person_24"/>
