--- a/app/src/main/res/layout/fragment_home_weather_rv.xml
+++ b/app/src/main/res/layout/fragment_home_weather_rv.xml
@@ -29,7 +29,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/tv_temperature"
             android:gravity="center"
-            android:padding="4dp"
             android:text="20"
             android:textSize="20sp"
             android:textColor="@color/white"
@@ -37,28 +36,25 @@
             android:layout_below="@id/tv_time"/>
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/tv_temperature"
             android:id="@+id/iv_condition"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/tv_temperature"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:padding="4dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/tv_windspeed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_windspeed"
+            android:layout_below="@id/iv_condition"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
             android:padding="3dp"
-            android:layout_margin="4dp"
-            android:layout_centerHorizontal="true"
             android:text="20"
-            android:textSize="20sp"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            android:layout_below="@id/iv_condition"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
 
 
