--- a/app/src/main/res/layout/activity_crop_planting.xml
+++ b/app/src/main/res/layout/activity_crop_planting.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#F6F6F6"
     tools:context=".CropPlanting">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,7 +21,6 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             app:cardElevation="0dp"
-            app:cardCornerRadius="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             >
@@ -38,10 +37,9 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="#F5F5F5"
+                android:background="#C5C5C5"
                 android:layout_gravity="bottom"
                 />
-
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
