--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -10,33 +10,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/titleBarManage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="30dp"
-            android:background="#f1f1f1"
+            android:padding="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Crop Planting"
-                android:fontFamily="@font/poppins_semibold"
-                android:textSize="30sp"
-                android:textColor="#000000"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:src="@drawable/icrop_logo_v2"
+                android:scaleType="centerInside"
+                android:layout_gravity="center"
+                />
+
+            <!-- Solid bottom border -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#C5C5C5"
+                android:layout_gravity="bottom"
+                />
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/optionsManage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:padding="20dp"
+            android:background="#F6F6F6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleBarManage"
@@ -120,23 +127,23 @@
                         app:layout_constraintHeight_percent="0.25"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-                    <TextView
-                        android:id="@+id/descOptionPlanting"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:gravity="center"
-                        android:text="View crop information such as details on planting, harvesting and care instructions"
-                        android:fontFamily="@font/poppins_regular"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHeight_default="percent"
-                        app:layout_constraintHeight_percent="0.4"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/titleOptionPlanting"
-                        />
+
+                        <TextView
+                            android:id="@+id/descOptionPlanting"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginEnd="12dp"
+                            android:fontFamily="@font/poppins_regular"
+                            android:gravity="center"
+                            android:text="View crop information such as details on planting, harvesting and care instructions"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHeight_default="percent"
+                            app:layout_constraintHeight_percent="0.4"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/titleOptionPlanting" />
 
                     <ImageView
                         android:id="@+id/imageView2"
@@ -235,7 +242,7 @@
                         <TextView
                             android:id="@+id/descOptionSoil"
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:layout_marginEnd="12dp"
                             android:gravity="center"
