--- a/app/src/main/res/layout/activity_crop_info_detail.xml
+++ b/app/src/main/res/layout/activity_crop_info_detail.xml
@@ -278,6 +278,7 @@
             android:layout_marginTop="10dp"
             android:paddingBottom="3dp"
             android:text="Go Back"
+            android:id="@+id/returnButton"
             android:textColor="@color/black"
             android:textSize="18dp"
             />
