--- a/app/src/main/res/layout/activity_soil_info_detail.xml
+++ b/app/src/main/res/layout/activity_soil_info_detail.xml
@@ -21,6 +21,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".SoilInfoDetailActivity">
+        <TextView
+            android:text="Soil Entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="30sp"
+            android:textColor="#55a935"
+            android:layout_marginStart="30dp"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -39,7 +48,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginStart="10dp"                android:id="@+id/soilNameDetail"/>
         </LinearLayout>
         <LinearLayout
@@ -61,8 +70,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"
+                android:textSize="18sp"
                 android:id="@+id/soilBestCropsDetail"/>
         </LinearLayout>
         <LinearLayout
@@ -84,8 +92,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"
+                android:textSize="18sp"
                 android:id="@+id/soilIssuesDetail"/>
         </LinearLayout>
         <LinearLayout
@@ -108,8 +115,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"
+                android:textSize="18sp"
                 android:id="@+id/soilContentDetail"/>
         </LinearLayout>
 
@@ -134,7 +140,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 />
         </LinearLayout>
 
@@ -157,7 +163,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/soilPHRangeDetail"/>
         </LinearLayout>
@@ -180,7 +186,7 @@
                 android:text="Test"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_regular"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginBottom="10dp"                android:id="@+id/soilDescriptionDetail"/>
         </LinearLayout>
         <Button
@@ -195,6 +201,7 @@
             android:text="Go Back"
             android:textColor="@color/black"
             android:textSize="18dp"
+            android:id="@+id/ReturnButton"
             />
     </LinearLayout>
     </LinearLayout>
