--- a/app/src/main/res/layout/cardview_reportlist.xml
+++ b/app/src/main/res/layout/cardview_reportlist.xml
@@ -3,8 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
     android:orientation="vertical"
-    android:layout_margin="4dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="8dp">
 
     <LinearLayout
@@ -32,7 +36,7 @@
                 android:layout_marginStart="10dp"
                 android:text="test"
                 android:id="@+id/listReportID"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,7 +58,7 @@
                 android:layout_marginStart="10dp"
                 android:text="test"
                 android:id="@+id/dateReported"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -75,7 +79,7 @@
                 android:layout_marginStart="10dp"
                 android:text="test"
                 android:id="@+id/cropListID"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
 
