--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,27 +40,15 @@
             app:layout_constraintTop_toBottomOf="@+id/iCropLogoProfile"
         />
 
-        <Button
-            android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="#55A935"
-            android:text="@string/logoutText"
-            app:layout_constraintTop_toBottomOf="@id/welcome"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:padding="8dp"
             android:background="@drawable/reports_rounded"
-            app:layout_constraintTop_toBottomOf="@id/logout">
+            android:padding="8dp"
+            android:layout_margin="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/welcome">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/historyList"
@@ -79,7 +67,7 @@
                     android:fontFamily="@font/poppins_regular"
                     android:padding="4dp"
                     android:paddingStart="8dp"
-                    android:text="Records"
+                    android:text="Your Records"
                     android:textColor="#FFFFFF"
                     android:textSize="24sp" />
 
@@ -94,6 +82,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/historyList" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#55A935"
+            android:text="@string/logoutText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
