--- a/app/src/main/res/layout/pest_diseases_cardview.xml
+++ b/app/src/main/res/layout/pest_diseases_cardview.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -56,7 +56,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="test"
                 android:id="@+id/damageInfo"
                 android:textSize="24sp" />
