--- a/app/src/main/res/layout/soil_list_cardview.xml
+++ b/app/src/main/res/layout/soil_list_cardview.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +55,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="test"
                 android:id="@+id/bestCropInfo"
                 android:textSize="24sp" />
